--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <div class="container-fluid">
 
         <!-- header... -->
-        <header class="row " id="header"> 
+        <header class="row" id="header"> 
         </header>  
 
         <!-- slider... -->
@@ -50,7 +50,7 @@
 
         <!-- copyright... -->
         <div id="reserved" class="row">
-          <h6>All Copyright Reserved</h6>
+          <h6>© Copyright 2021. Reserved by Madan & Safdar</h6>
         </div>
 
     </div>
