Updated nav bar and created the products list and cart
Still data is being fetched from json file

--- a/public/index.html
+++ b/public/index.html
@@ -25,34 +25,35 @@
 
 <!-- body starts from here... -->
 <body>
-    <div class="container-fluid">
+  <div id="root"></div>
+    <!-- <div id="root"> -->
 
-        <!-- header... -->
+
+        <!-- header...
         <header class="row" id="header"> 
         </header>  
 
         <!-- slider... -->
-        <div class="row" id="slider">
-        </div>
+        <!-- <div class="row" id="slider">
+        </div> -->
 
         <!-- body... -->
-        <div class="row" style="margin-left: 5px;">
+        <!-- <div class="row" style="margin-left: 5px;">
           <div class="container">
             <div class="row" id="body">
-
             </div>
           </div>
-        </div>
+        </div> -->
 
         <!-- footer... -->
-        <div class="row" id="footer">
-        </div>
+        <!-- <div class="row" id="footer"> -->
+        <!-- </div> -->
 
         <!-- copyright... -->
-        <div id="reserved" class="row">
-          <h6>© Copyright 2021. Reserved by Madan & Safdar</h6>
-        </div>
+        <!-- <div id="reserved" class="row"> -->
+          <!-- <h6>© Copyright 2021. Reserved by Madan & Safdar</h6> -->
+        <!-- </div> --> 
 
-    </div>
+    <!-- </div> -->
 </body>
 </html>
